--- a/data/index.html
+++ b/data/index.html
@@ -31,7 +31,7 @@
       </div>
     </nav>
     <div class="dashboard-container">
-      <h2>TinyML Control</h2>
+      <h2>TinyML HEMS Control</h2>
       <div class="device-controls">
         <!-- House Light Card -->
         <div class="card">
